src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>NTV_Req_d_Days__c</fullName>
        <formula>IF(Contains(Community_ID__c, &quot;CA&quot;), &quot;CA - 30 Days&quot;, 
IF(Contains(Community_ID__c, &quot;WA&quot;), &quot;WA - 20 Days&quot;, (LEFT(Community_ID__c,2)+&quot; - 60 Days&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NTV Req&apos;d Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoPaymentsAcceptedForWayne__c</fullName>
        <defaultValue>&quot;No Payments Accepted&quot;</defaultValue>
        <label>No Payments Accepted for Wayne</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Payments_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used when absolutely no payments accepted</description>
        <inlineHelpText>Check only when absolutely no payments are accepted</inlineHelpText>
        <label>No Payments Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Renewal_Flag__c</fullName>
        <formula>IF( Sent_Non_Renewal__c ,&quot;Sent Non Renewal&quot;, &quot;Non Renewal Not Sent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Renewal Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Time_Late_Fee_Amount__c</fullName>
        <description>The One Time Late Fee Amount is populated with data from Foundation&apos;s community policies.</description>
        <inlineHelpText>The One Time Late Fee Amount is populated with data from Foundation&apos;s community policies.</inlineHelpText>
        <label>One Time Late Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_Time_Late_Fee_Percentage__c</fullName>
        <description>The One Time Late Fee Percent is populated with data from Foundation&apos;s community policies.</description>
        <label>One Time Late Fee Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>One_Time_Late_Fee_Type__c</fullName>
        <description>One Time Late Fee field is populated with data from Foundation&apos;s community policies.  This is a community level policies, the late fee on the actual lease may differ based on the community policy at the time the lease was created.</description>
        <inlineHelpText>One Time Late Fee Type field is populated with data from Foundation&apos;s current community policies.</inlineHelpText>
        <label>One Time Late Fee Type</label>
        <picklist>
            <picklistValues>
                <fullName>fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>percentOfBalance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>percentOfFomBill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OnlineProspectPaymentsCommunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate whether or not Online Prospect payments are accepted at a Community.</description>
        <label>Online Prospect Payments?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OnlineProspectPaymentsResident__c</fullName>
        <formula>if(Parent.OnlineProspectPaymentsCommunity__c, image(&quot;https://c.cs2.content.force.com/servlet/servlet.FileDownload?file=015R00000006Xgd&quot;, &quot;Online Prospect Payment Accepted&quot;, 100, 100), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Prospect Payments?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenLitigationForWayne__c</fullName>
        <defaultValue>&quot;Open Litigation&quot;</defaultValue>
        <label>Open Litigation for Wayne</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Legal_Alerts__c</fullName>
        <label>Open Prevent Legal Actions</label>
        <summaryFilterItems>
            <field>Legal_Alerts__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryForeignKey>Legal_Alerts__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Litigation_Activities__c</fullName>
        <description>Number of Open Litigation Activities for the Customer Group Account</description>
        <label>Open Litigation Activities</label>
        <summaryFilterItems>
            <field>Litigation__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryForeignKey>Litigation__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Litigation_Flag__c</fullName>
        <formula>if(Open_Litigation_Activities__c &gt;0, IMAGE(&quot;/servlet/servlet.FileDownload?file=015P00000000uuo&quot;, &quot;Open Litigation&quot;, 10, 100), &quot;No Open Litigation&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Litigation Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_Comments_1__c</fullName>
        <description>Payment Acceptance Guidelines - PAG (Admin Case #00016972)</description>
        <label>PAG Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PAG_Comments_2__c</fullName>
        <description>Payment Acceptance Guidelines - PAG (Admin Case #00016972)</description>
        <label>PAG Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PAG_Comments_3__c</fullName>
        <description>Payment Acceptance Guidelines - PAG (Admin Case #00016972)</description>
        <label>PAG Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PROSPECT_AddressCity__c</fullName>
        <label>Prospect City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSPECT_AddressLine1__c</fullName>
        <label>Prospect Address Line 1</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSPECT_AddressLine2__c</fullName>
        <label>Prospect Address Line 2</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSPECT_AddressState__c</fullName>
        <label>Prospect State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSPECT_AddressZip__c</fullName>
        <label>Prospect Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSPECT_Bath__c</fullName>
        <label>Prospect Baths</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROSPECT_Bed__c</fullName>
        <label>Prospect Beds</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROSPECT_CellPhone__c</fullName>
        <label>Prospect Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PROSPECT_ClassID__c</fullName>
        <label>Prospect ClassID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSPECT_Email__c</fullName>
        <label>Prospect Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PROSPECT_Fax__c</fullName>
        <label>Prospect Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PROSPECT_HomePhone__c</fullName>
        <label>Prospect Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PROSPECT_LeasingAgent__c</fullName>
        <label>Prospect Leasing Agent</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSPECT_WorkPhone2__c</fullName>
        <label>Prospect Work Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PROSPECT_WorkPhone__c</fullName>
        <label>Prospect Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PSIURL__c</fullName>
        <label>PSI URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ParentIsLiveOnLM__c</fullName>
        <formula>if( Parent.IsLiveOnLM__c, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Is Live On Lead Management</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Name_workflow__c</fullName>
        <description>Created for CSO Associate Housing Group logic.  This field will be populated with the parent accounts name, if this field is populated with &quot;Associate House Account&quot;, then it will be shared with the CSO Associate Housing group through a criteria based sharing rule on the account.</description>
        <label>Parent Account Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Community_ID__c</fullName>
        <formula>Parent.Community_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Is_MRI__c</fullName>
        <formula>IF(Parent.Is_MRI__c=True, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent_Is_MRI?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_NTV_Req_d_Days__c</fullName>
        <formula>Parent.NTV_Req_d_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NTV Req&apos;d Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_SODA_Reqd_Days__c</fullName>
        <formula>Parent.SODA_Req_d_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SODA Req&apos;d Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_SOLD__c</fullName>
        <formula>Parent.SOLD_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent SOLD?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentsAcceptedLabel__c</fullName>
        <formula>if(No_Payments_Accepted__c,  IMAGE(&quot;servlet/servlet.FileDownload?file=015P00000000uut&quot;, &quot;No Payments Accepted&quot;, 11, 150) , &quot;Payments Accepted&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payments Accepted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phases__c</fullName>
        <description>Show the number of phases in this Community</description>
        <label># of Phases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrevNameID__c</fullName>
        <externalId>true</externalId>
        <label>Prev Name ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Name_ID_Search__c</fullName>
        <formula>HYPERLINK(&quot;https://na4.salesforce.com/search/SearchResults?searchType=1&amp;sen=0&amp;setLast=1&amp;sbstr=&quot; &amp;   PrevNameID__c  , &quot;Search for it&quot;)</formula>
        <label>Prev Name ID Search</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PropPhaseID__c</fullName>
        <label>Property Phase ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferURL__c</fullName>
        <label>Refer URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Refresh_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DO NOT DELETE - Flag used by the Real time Sync process. Please do not ever delete!!!</description>
        <label>Refresh Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Define Regions for reporting purposes</description>
        <formula>IF(Contains(LEFT(Community_ID__c, 2),&quot;CA&quot;), &quot;California&quot;, 
IF(Contains(LEFT(Community_ID__c, 2),&quot;DC&quot;), &quot;Mid-Atlantic&quot;,
IF(Contains(LEFT(Community_ID__c, 2),&quot;MD&quot;), &quot;Mid-Atlantic&quot;,
IF(Contains(LEFT(Community_ID__c, 2),&quot;VA&quot;), &quot;Mid-Atlantic&quot;,
IF(Contains(LEFT(Community_ID__c, 2), &quot;IL&quot;), &quot;Midwest&quot;,
IF(Contains(LEFT( Community_ID__c, 2 ),&quot;CT&quot;), &quot;Northeast&quot;,
IF(Contains(LEFT( Community_ID__c, 2 ),&quot;MA&quot;), &quot;Northeast&quot;,
IF(Contains(LEFT( Community_ID__c, 2 ),&quot;NJ&quot;), &quot;Northeast&quot;,
IF(Contains(LEFT( Community_ID__c, 2 ),&quot;NY&quot;), &quot;Northeast&quot;,
IF(Contains(LEFT( Community_ID__c, 2 ),&quot;RI&quot;), &quot;Northeast&quot;,
IF(Contains(LEFT( Community_ID__c, 2 ),&quot;WA&quot;), &quot;Pacific Northwest&quot;,
null)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident__c</fullName>
        <formula>HYPERLINK(&quot;file://&quot; &amp; &quot;api_nt5/data/ccc/resident_statements/&quot; &amp; Community_Name__c, &quot;View Directory&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resident Statements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Non_Res_Unit_Count__c</fullName>
        <label>SF Non-Res Unit Count</label>
        <summaryFilterItems>
            <field>Unit__c.Residential__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Unit__c.Community__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SF_Residential_Unit_Count__c</fullName>
        <label>SF Residential Unit Count</label>
        <summaryFilterItems>
            <field>Unit__c.Residential__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Unit__c.Community__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SF_Total_Unit_Count__c</fullName>
        <label>SF Total Unit Count</label>
        <summaryForeignKey>Unit__c.Community__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SODABalance__c</fullName>
        <label>SODA Balance / Refund Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SODAProcessedDate__c</fullName>
        <label>SODA Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SODAShipped__c</fullName>
        <label>SODA Shipped</label>
        <picklist>
            <picklistValues>
                <fullName>FedEx</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SODA_Req_d_Days__c</fullName>
        <formula>IF(Contains(Community_ID__c, &quot;CA&quot;), &quot;CA - 21 Days&quot;,
IF(Contains(Community_ID__c, &quot;CT&quot;), &quot;CT - 30 Days&quot;, 
IF(Contains(Community_ID__c, &quot;DC&quot;), &quot;DC - 45 Days&quot;,
IF(Contains(Community_ID__c, &quot;IL&quot;), &quot;IL - 30 Days&quot;, 
IF(Contains(Community_ID__c, &quot;MA&quot;), &quot;MA - 30 Days&quot;, 
IF(Contains(Community_ID__c, &quot;MD&quot;), &quot;MD - 30 Days&quot;, 
IF(Contains(Community_ID__c, &quot;NJ&quot;), &quot;NJ - 30 Days&quot;, 
IF(Contains(Community_ID__c, &quot;NY&quot;), &quot;NY - 30 Days&quot;, 
IF(Contains(Left(Community_ID__c, 2), &quot;RI&quot;), &quot;RI - 20 Days&quot;, 
IF(Contains(Community_ID__c, &quot;VA&quot;), &quot;VA - 30 Days&quot;, 
IF(Contains(Community_ID__c, &quot;WA&quot;), &quot;WA - 14 Days&quot;, null)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SODA Req&apos;d Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOLD_Flag__c</fullName>
        <formula>/*
IF(
  AND(
      RecordTypeId =&quot;012600000000n1g&quot;,
      OR(
         Contains(Name, &quot;SOLD&quot;), 
         Contains(Name, &quot;Sold&quot;), 
         Contains(Name, &quot;Disposition&quot;))),  
(IMAGE( &quot;https://na4.salesforce.com/servlet/servlet.FileDownload?file=01560000000MBr7&quot;, &quot;SOLD Community&quot;)), &quot;&quot;)
*/
IF(
  AND(
      RecordTypeId =&quot;012600000000n1g&quot;,
      OR(
         Contains(Name, &quot;SOLD&quot;), 
         Contains(Name, &quot;Sold&quot;), 
         Contains(Name, &quot;Disposition&quot;),
         Scheduled_Disposition_Date__c  &lt;=  TODAY() )),  
(IMAGE( &quot;https://c.cs4.content.force.com/servlet/servlet.FileDownload?file=015P00000000xAj&quot;, &quot;SOLD Community&quot;)), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOLD Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Disposition_Date__c</fullName>
        <label>Scheduled Disposition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Copy_of_Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Send Copy of Bill To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_Non_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Non-Renewal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_1__c</fullName>
        <description>Payment Acceptance Guidelines (Admin Case #00016972)</description>
        <label>Stage 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stage_2__c</fullName>
        <description>Payment Acceptance Guidelines (Admin Case #00016972)</description>
        <label>Stage 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stage_3__c</fullName>
        <description>Payment Acceptance Guidelines (Admin Case #00016972)</description>
        <label>Stage 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>LEFT(Community_ID__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StreetAddress__c</fullName>
        <label>Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supported_by_Blue_Skies_Advantage_CG__c</fullName>
        <formula>IF(ISPICKVAL(Parent.Supported_by_Blue_Skies_Advantage__c , &quot;Yes&quot;), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supported by Blue Skies Advantage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supported_by_Blue_Skies_Advantage__c</fullName>
        <description>Used by Affordable Housing</description>
        <label>Supported by Blue Skies Advantage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Class_IDs__c</fullName>
        <label>Target Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Third_Party_Billing_Company__c</fullName>
        <label>Third Party Billing Company</label>
        <picklist>
            <picklistValues>
                <fullName>AUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studebaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WSSC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalOpenLitigationActivities__c</fullName>
        <label>Total Open Litigation Activities</label>
        <summaryFilterItems>
            <field>Litigation__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryForeignKey>Litigation__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Legal_Alerts__c</fullName>
        <label>Total Prevent Legal Actions</label>
        <summaryForeignKey>Legal_Alerts__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TourURL__c</fullName>
        <label>Tour URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unique_Record_Id__c</fullName>
        <description>Concatenation of community code and customer group account number to uniquely identify a customer group that belong to multiple communities during upsert processes.</description>
        <externalId>true</externalId>
        <inlineHelpText>Use NameGroup when entering prospects.
Example: HO06010536</inlineHelpText>
        <label>Unique Record Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Upcoming_Disposition_Black_Out_Start__c</fullName>
        <description>Date when Blackout period begins.</description>
        <inlineHelpText>Please enter date when blackout period begins</inlineHelpText>
        <label>Upcoming Disposition Black Out Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upcoming_Disposition_Flag__c</fullName>
        <formula>IF( Upcoming_Disposition__c =True, 
(IMAGE( &quot;https://na4.salesforce.com/servlet/servlet.FileDownload?file=01560000000MCak&quot;, &quot;FOR SALE&quot;)), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upcoming Disposition Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upcoming_Disposition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upcoming Disposition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_in_MRI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update in MRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Western_Union_Available__c</fullName>
        <formula>IF(
AND(
NOT(LEFT(Account_ID__c , 5)=&quot;CA800&quot;), 
NOT(LEFT(Account_ID__c , 5)=&quot;NY010&quot;), 
(Parent.Accept_Western_Union__c)), 
IMAGE(&quot;https://na4.salesforce.com/servlet/servlet.FileDownload?file=01560000000hmBC&quot;, &quot;Western Union&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WU Available for this Community?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_Offs__c</fullName>
        <label>Write Offs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Buildings__c</fullName>
        <label># of Buildings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Units__c</fullName>
        <label># of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Account_ID__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllCommunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Community_ID__c</columns>
        <columns>Law_Firm__c</columns>
        <columns>IsLiveOnLM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Community</value>
        </filters>
        <label>All Communities</label>
    </listViews>
    <listViews>
        <fullName>AllCustomerGroups</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Exists_in_MRI__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Unique_Record_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.CustomerGroup</value>
        </filters>
        <label>All Customer Groups</label>
    </listViews>
    <listViews>
        <fullName>AllCustomerGroupsResidents</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Exists_in_MRI__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Unique_Record_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.CustomerGroup</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Resident</value>
        </filters>
        <label>All Customer Groups Residents</label>
    </listViews>
    <listViews>
        <fullName>AllRetailCustomerGroups</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Retail_Group</value>
        </filters>
        <label>All Retail Customer Groups</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Resident</value>
        </filters>
        <label>New This Week-residents</label>
    </listViews>
    <namedFilters>
        <fullName>nf_01I60000000MXy0EAG_00NP0000000aAF3MAM</fullName>
        <active>true</active>
        <field>Payment_Plan_Contract__c.AccountLateCount__c</field>
        <filterItems>
            <field>Account.Late_Count__c</field>
            <operation>equals</operation>
            <valueField>Account.Late_Count__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Payment Plan Contract_AccountLateCount</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I60000000MXy0EAG_00NP0000000aAFXMA2</fullName>
        <active>true</active>
        <field>Payment_Plan_Contract__c.Account_NSF_Count__c</field>
        <filterItems>
            <field>Account.NSF_Count__c</field>
            <operation>equals</operation>
            <valueField>Account.NSF_Count__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Payment Plan Contract_Account NSF Count</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I60000000MXy0EAG_00NP0000000aAFcMAM</fullName>
        <active>true</active>
        <field>Payment_Plan_Contract__c.Account_Balance_Due__c</field>
        <filterItems>
            <field>Account.Current_Balance__c</field>
            <operation>equals</operation>
            <valueField>Account.Current_Balance__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Payment Plan Contract_Account Balance Du</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I60000000MXy0EAG_00NP0000000aAFhMAM</fullName>
        <active>true</active>
        <field>Payment_Plan_Contract__c.Account_Write_Offs__c</field>
        <filterItems>
            <field>Account.Write_Offs__c</field>
            <operation>equals</operation>
            <valueField>Account.Write_Offs__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Payment Plan Contract_Account Write Offs</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IP0000000D4x0MAC_00NP0000000bPAfMAM</fullName>
        <active>true</active>
        <field>Avalon_Guest_Card__c.OtherCommunities__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Community</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Avalon Guest Card_Other communities are</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IR00000005GiMMAU_00NR00000013gpuMAA</fullName>
        <active>false</active>
        <errorMessage>Please choose a Community Account</errorMessage>
        <field>Guest_Card__c.Community__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Community</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Guest Card_Community</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IR00000005HWlMAM_00NR00000013oFlMAI</fullName>
        <active>true</active>
        <errorMessage>Please select a Community Account.</errorMessage>
        <field>RMACTION__c.Community_Do_not_use__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Community</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>RMAction_Community (Do not use)</name>
    </namedFilters>
</CustomObject>